force-app/main/default/objects/Purchase_Item__c/Purchase_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Item</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Purchase Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>