force-app/main/default/objects/Purchase_Item__c/fields/DIscount__c.field-meta.xml
<CustomField>
    <fullName>DIscount__c</fullName>
    <label>DIscount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>