force-app/main/default/objects/Purchase_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Purchase Items</relationshipLabel>
    <relationshipName>Purchase_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>