force-app/main/default/objects/Purchase_Item__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>Purchase</label>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Purchase Items</relationshipLabel>
    <relationshipName>Purchase_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>